alter-lib/src/main/java/es/uvigo/ei/sing/alter/parser/NexusParser.java
/* Generated By:JavaCC: Do not edit this line. NexusParser.java */
package es.uvigo.ei.sing.alter.parser;

import es.uvigo.ei.sing.alter.types.Nexus;
import es.uvigo.ei.sing.alter.types.NexusSequence;
import java.io.StringReader;
import java.util.Vector;

/**
* NEXUS format parser.
* @author Daniel Gomez Blanco
* @version 1.3
*/
public class NexusParser implements NexusParserConstants {
  /**
  * Static method that parses an input string and returns a MSA in NEXUS format.
  * @param in Input string.
  * @return MSA in NEXUS format.
  */
  public static Nexus parseMSA (String in) throws ParseException
    {
        //Parse string and return MSA
        NexusParser parser = new NexusParser(new StringReader(in));
        return parser.Nexus();
    }

/**
* Grammar's root production. Structure:<br>
* &nbsp;&nbsp;1. Any combination of spaces, tabs and new lines until "#NEXUS".<br>
* &nbsp;&nbsp;2. "#NEXUS".<br>
* &nbsp;&nbsp;3. Any combination of characters until "BEGIN DATA;".<br>
* &nbsp;&nbsp;4. "BEGIN DATA;"<br>
* &nbsp;&nbsp;5. Any combination of characters until "ntax=".<br>
* &nbsp;&nbsp;6. "ntax=" followed by the taxa number (number of sequences in the MSA),
* "nchar=" followed by the sequences length and ";".<br>
* &nbsp;&nbsp;7. Any character until "datatype=".<br>
* &nbsp;&nbsp;8. "datatype=" followed by the MSA type.<br>
* &nbsp;&nbsp;9. Any character until "matrix".<br>
* &nbsp;&nbsp;10. Sequences in NEXUS format:<br>
* &nbsp;&nbsp;&nbsp;&nbsp;10a. Sequence identifier.<br>
* &nbsp;&nbsp;&nbsp;&nbsp;10a. Data line.<br>
* &nbsp;&nbsp;11. ";".<br>
* &nbsp;&nbsp;12. "end;".<br>
* &nbsp;&nbsp;13. Any combination of characters until the end of file.<br>
* @return MSA in NEXUS format.
*/
  final public Nexus Nexus() throws ParseException {
    Vector<NexusSequence> seqs = new Vector<NexusSequence>();
    int taxa = 0,length = 0;
    String id, data;
    String type = "";
    int cont = 0;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EOL:
      case BLANK:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EOL:
        jj_consume_token(EOL);
        break;
      case BLANK:
        jj_consume_token(BLANK);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(10);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EOL:
      case BLANK:
      case UPPER_CASE:
      case LOWER_CASE:
      case NUMBER:
      case ANY:
      case 10:
      case 11:
      case 12:
      case 13:
      case 14:
      case 15:
      case 16:
      case 17:
      case 18:
      case 19:
      case 20:
      case 21:
      case 22:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UPPER_CASE:
        jj_consume_token(UPPER_CASE);
        break;
      case LOWER_CASE:
        jj_consume_token(LOWER_CASE);
        break;
      case NUMBER:
        jj_consume_token(NUMBER);
        break;
      case ANY:
        jj_consume_token(ANY);
        break;
      case 11:
        jj_consume_token(11);
        break;
      case 12:
        jj_consume_token(12);
        break;
      case 13:
        jj_consume_token(13);
        break;
      case 14:
        jj_consume_token(14);
        break;
      case BLANK:
        jj_consume_token(BLANK);
        break;
      case EOL:
        jj_consume_token(EOL);
        break;
      case 10:
        jj_consume_token(10);
        break;
      case 15:
        jj_consume_token(15);
        break;
      case 16:
        jj_consume_token(16);
        break;
      case 17:
        jj_consume_token(17);
        break;
      case 18:
        jj_consume_token(18);
        break;
      case 19:
        jj_consume_token(19);
        break;
      case 20:
        jj_consume_token(20);
        break;
      case 21:
        jj_consume_token(21);
        break;
      case 22:
        jj_consume_token(22);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 23:
      jj_consume_token(23);
      jj_consume_token(11);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
        case BLANK:
        case UPPER_CASE:
        case LOWER_CASE:
        case NUMBER:
        case ANY:
        case 11:
        case 12:
        case 13:
        case 14:
        case 20:
        case 21:
        case 22:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UPPER_CASE:
          jj_consume_token(UPPER_CASE);
          break;
        case LOWER_CASE:
          jj_consume_token(LOWER_CASE);
          break;
        case NUMBER:
          jj_consume_token(NUMBER);
          break;
        case ANY:
          jj_consume_token(ANY);
          break;
        case 11:
          jj_consume_token(11);
          break;
        case 12:
          jj_consume_token(12);
          break;
        case 13:
          jj_consume_token(13);
          break;
        case 14:
          jj_consume_token(14);
          break;
        case BLANK:
          jj_consume_token(BLANK);
          break;
        case EOL:
          jj_consume_token(EOL);
          break;
        case 20:
          jj_consume_token(20);
          break;
        case 21:
          jj_consume_token(21);
          break;
        case 22:
          jj_consume_token(22);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 15:
          jj_consume_token(15);
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[6] = jj_gen;
              break label_5;
            }
            jj_consume_token(BLANK);
          }
          jj_consume_token(20);
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[7] = jj_gen;
              break label_6;
            }
            jj_consume_token(BLANK);
          }
          taxa = Number();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            jj_consume_token(EOL);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case 11:
            jj_consume_token(11);
            break;
          default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case 16:
          jj_consume_token(16);
          label_7:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[9] = jj_gen;
              break label_7;
            }
            jj_consume_token(BLANK);
          }
          jj_consume_token(20);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[10] = jj_gen;
              break label_8;
            }
            jj_consume_token(BLANK);
          }
          length = Number();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            jj_consume_token(EOL);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case 11:
            jj_consume_token(11);
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case 17:
          jj_consume_token(17);
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[12] = jj_gen;
              break label_9;
            }
            jj_consume_token(BLANK);
          }
          jj_consume_token(20);
          label_10:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_10;
            }
            jj_consume_token(BLANK);
          }
          type = Type();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            jj_consume_token(EOL);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case 11:
            jj_consume_token(11);
            break;
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_11:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
          case BLANK:
          case UPPER_CASE:
          case LOWER_CASE:
          case NUMBER:
          case ANY:
          case 11:
          case 12:
          case 13:
          case 14:
          case 20:
          case 21:
          case 22:
            ;
            break;
          default:
            jj_la1[16] = jj_gen;
            break label_11;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UPPER_CASE:
            jj_consume_token(UPPER_CASE);
            break;
          case LOWER_CASE:
            jj_consume_token(LOWER_CASE);
            break;
          case NUMBER:
            jj_consume_token(NUMBER);
            break;
          case ANY:
            jj_consume_token(ANY);
            break;
          case 11:
            jj_consume_token(11);
            break;
          case 12:
            jj_consume_token(12);
            break;
          case 13:
            jj_consume_token(13);
            break;
          case 14:
            jj_consume_token(14);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case EOL:
            jj_consume_token(EOL);
            break;
          case 20:
            jj_consume_token(20);
            break;
          case 21:
            jj_consume_token(21);
            break;
          case 22:
            jj_consume_token(22);
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 15:
        case 16:
        case 17:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_4;
        }
      }
                if (taxa == 0)
                    {if (true) throw new ParseException("Number of sequences (ntax) missing in NEXUS header.");}
                if (length == 0)
                    {if (true) throw new ParseException("Sequences length (nchar) missing in NEXUS header.");}
                if (type.isEmpty())
                    {if (true) throw new ParseException("MSA type (datatype) missing in NEXUS header.");}
      break;
    case 24:
      jj_consume_token(24);
      jj_consume_token(11);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
        case BLANK:
        case UPPER_CASE:
        case LOWER_CASE:
        case NUMBER:
        case ANY:
        case 11:
        case 12:
        case 13:
        case 14:
        case 20:
        case 21:
        case 22:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_12;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UPPER_CASE:
          jj_consume_token(UPPER_CASE);
          break;
        case LOWER_CASE:
          jj_consume_token(LOWER_CASE);
          break;
        case NUMBER:
          jj_consume_token(NUMBER);
          break;
        case ANY:
          jj_consume_token(ANY);
          break;
        case 11:
          jj_consume_token(11);
          break;
        case 12:
          jj_consume_token(12);
          break;
        case 13:
          jj_consume_token(13);
          break;
        case 14:
          jj_consume_token(14);
          break;
        case BLANK:
          jj_consume_token(BLANK);
          break;
        case EOL:
          jj_consume_token(EOL);
          break;
        case 20:
          jj_consume_token(20);
          break;
        case 21:
          jj_consume_token(21);
          break;
        case 22:
          jj_consume_token(22);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(15);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BLANK:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_13;
        }
        jj_consume_token(BLANK);
      }
      jj_consume_token(20);
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BLANK:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_14;
        }
        jj_consume_token(BLANK);
      }
      taxa = Number();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EOL:
        jj_consume_token(EOL);
        break;
      case BLANK:
        jj_consume_token(BLANK);
        break;
      case 11:
        jj_consume_token(11);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
        case BLANK:
        case UPPER_CASE:
        case LOWER_CASE:
        case NUMBER:
        case ANY:
        case 11:
        case 12:
        case 13:
        case 14:
        case 20:
        case 21:
        case 22:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_15;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UPPER_CASE:
          jj_consume_token(UPPER_CASE);
          break;
        case LOWER_CASE:
          jj_consume_token(LOWER_CASE);
          break;
        case NUMBER:
          jj_consume_token(NUMBER);
          break;
        case ANY:
          jj_consume_token(ANY);
          break;
        case 11:
          jj_consume_token(11);
          break;
        case 12:
          jj_consume_token(12);
          break;
        case 13:
          jj_consume_token(13);
          break;
        case 14:
          jj_consume_token(14);
          break;
        case BLANK:
          jj_consume_token(BLANK);
          break;
        case EOL:
          jj_consume_token(EOL);
          break;
        case 20:
          jj_consume_token(20);
          break;
        case 21:
          jj_consume_token(21);
          break;
        case 22:
          jj_consume_token(22);
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(19);
                if (taxa == 0)
                    {if (true) throw new ParseException("Number of sequences (ntax) missing in NEXUS header.");}
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
        case BLANK:
        case UPPER_CASE:
        case LOWER_CASE:
        case NUMBER:
        case ANY:
        case 11:
        case 12:
        case 13:
        case 14:
        case 20:
        case 21:
        case 22:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_16;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UPPER_CASE:
          jj_consume_token(UPPER_CASE);
          break;
        case LOWER_CASE:
          jj_consume_token(LOWER_CASE);
          break;
        case NUMBER:
          jj_consume_token(NUMBER);
          break;
        case ANY:
          jj_consume_token(ANY);
          break;
        case 11:
          jj_consume_token(11);
          break;
        case 12:
          jj_consume_token(12);
          break;
        case 13:
          jj_consume_token(13);
          break;
        case 14:
          jj_consume_token(14);
          break;
        case BLANK:
          jj_consume_token(BLANK);
          break;
        case EOL:
          jj_consume_token(EOL);
          break;
        case 20:
          jj_consume_token(20);
          break;
        case 21:
          jj_consume_token(21);
          break;
        case 22:
          jj_consume_token(22);
          break;
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(25);
      jj_consume_token(11);
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
        case BLANK:
        case UPPER_CASE:
        case LOWER_CASE:
        case NUMBER:
        case ANY:
        case 11:
        case 12:
        case 13:
        case 14:
        case 20:
        case 21:
        case 22:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_17;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UPPER_CASE:
          jj_consume_token(UPPER_CASE);
          break;
        case LOWER_CASE:
          jj_consume_token(LOWER_CASE);
          break;
        case NUMBER:
          jj_consume_token(NUMBER);
          break;
        case ANY:
          jj_consume_token(ANY);
          break;
        case 11:
          jj_consume_token(11);
          break;
        case 12:
          jj_consume_token(12);
          break;
        case 13:
          jj_consume_token(13);
          break;
        case 14:
          jj_consume_token(14);
          break;
        case BLANK:
          jj_consume_token(BLANK);
          break;
        case EOL:
          jj_consume_token(EOL);
          break;
        case 20:
          jj_consume_token(20);
          break;
        case 21:
          jj_consume_token(21);
          break;
        case 22:
          jj_consume_token(22);
          break;
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
          jj_consume_token(16);
          label_19:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[30] = jj_gen;
              break label_19;
            }
            jj_consume_token(BLANK);
          }
          jj_consume_token(20);
          label_20:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[31] = jj_gen;
              break label_20;
            }
            jj_consume_token(BLANK);
          }
          length = Number();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            jj_consume_token(EOL);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case 11:
            jj_consume_token(11);
            break;
          default:
            jj_la1[32] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case 17:
          jj_consume_token(17);
          label_21:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[33] = jj_gen;
              break label_21;
            }
            jj_consume_token(BLANK);
          }
          jj_consume_token(20);
          label_22:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case BLANK:
              ;
              break;
            default:
              jj_la1[34] = jj_gen;
              break label_22;
            }
            jj_consume_token(BLANK);
          }
          type = Type();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            jj_consume_token(EOL);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case 11:
            jj_consume_token(11);
            break;
          default:
            jj_la1[35] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[36] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_23:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
          case BLANK:
          case UPPER_CASE:
          case LOWER_CASE:
          case NUMBER:
          case ANY:
          case 11:
          case 12:
          case 13:
          case 14:
          case 20:
          case 21:
          case 22:
            ;
            break;
          default:
            jj_la1[37] = jj_gen;
            break label_23;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UPPER_CASE:
            jj_consume_token(UPPER_CASE);
            break;
          case LOWER_CASE:
            jj_consume_token(LOWER_CASE);
            break;
          case NUMBER:
            jj_consume_token(NUMBER);
            break;
          case ANY:
            jj_consume_token(ANY);
            break;
          case 11:
            jj_consume_token(11);
            break;
          case 12:
            jj_consume_token(12);
            break;
          case 13:
            jj_consume_token(13);
            break;
          case 14:
            jj_consume_token(14);
            break;
          case BLANK:
            jj_consume_token(BLANK);
            break;
          case EOL:
            jj_consume_token(EOL);
            break;
          case 20:
            jj_consume_token(20);
            break;
          case 21:
            jj_consume_token(21);
            break;
          case 22:
            jj_consume_token(22);
            break;
          default:
            jj_la1[38] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
        case 17:
          ;
          break;
        default:
